# mail_management_agent

./: .gitignore  README.md  credentials.py  endpoints.py  main.py  models.py  pyproject.toml  seed.py  util.py
agents/: ai_agent.py
auth/: dependency.py  handlers.py
db/: db_test.ipynb  relational_db.py  vector_db.py
env_secrets/: config.py
models/: __init__.py  relational_models.py  relational_schema.py  vector_schema.py
routers/: auth.py  endpoints.py  google_api.py  users.py
secrets/: config.py
utils/: auth.py  credentials.py  google.py  util.py
